--- a/broadcast_message_detail.html
+++ b/broadcast_message_detail.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sass</title>
     <!-- --fonts-- -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -20,28 +20,27 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    
+
     <!-- --bootstrap-- -->
     <link rel="stylesheet" href="assets/css/bootstrap.min.css" />
 
     <!-- --style css--- -->
     <link rel="stylesheet" href="assets/css/style.css" />
-</head>
-<body> 
-  <header>
-    <div class="container">
-      <div class="header-data">
-        <h3>教城主頁</h3>
-        <div class="header-right d-none d-sm-flex">
-          <img src="assets/images/Layer 2 1.png" alt="" />
-          <h3>Jay Chu</h3>
-          <h4>English</h4>
-          <img src="assets/images/HouseDoorFill.png" alt="" />
+  </head>
+  <body>
+    <header>
+      <div class="container">
+        <div class="header-data">
+          <h3>教城主頁</h3>
+          <div class="header-right d-none d-sm-flex">
+            <img src="assets/images/Layer 2 1.png" alt="" />
+            <h3>Jay Chu</h3>
+            <h4>English</h4>
+            <img src="assets/images/HouseDoorFill.png" alt="" />
+          </div>
         </div>
       </div>
-    </div>
-  </header>
-
+    </header>
   <!-- --main-- -->
   <section class="main">
     <div class="container">
@@ -105,67 +104,76 @@
     </div>
   </section>
 
-  <!-- --detail-- -->
-   <section>
-    <div class="container">
-    <div class="message-detail">
-        <div class="detail-title">
+    <!-- --detail-- -->
+    <section>
+      <div class="container">
+        <div class="message-detail">
+          <div class="detail-title">
             <h2>【立即報名】2024香港資訊及通訊科技獎︰學生創新獎</h2>
-        </div>
-        <div class="detail-back">
-           <a href="broadcast_message.html">
-            <i class="fa-solid fa-chevron-left"></i>
-            <span>返回</span>
-           </a>
-        </div>
-        <div class="detail-data">
+          </div>
+          <div class="detail-back">
+            <a href="broadcast_message.html">
+              <i class="fa-solid fa-chevron-left"></i>
+              <span>返回</span>
+            </a>
+          </div>
+          <div class="detail-data">
             <div class="detail-data-title">
-                <h3>親愛的教師、學生及會員：</h3>
-                <h2>【立即報名】2024香港資訊及通訊科技獎︰學生創新獎</h2>
+              <h3>親愛的教師、學生及會員：</h3>
+              <h2>【立即報名】2024香港資訊及通訊科技獎︰學生創新獎</h2>
             </div>
             <div class="detail-data-img">
-                <img src="assets/images/detail-img.png" alt="">
+              <img src="assets/images/detail-img.png" alt="" />
             </div>
             <div class="detail-data-content">
-                <p>香港教育城獲香港政府資訊科技總監辦公室 (OGCIO) 正式委任為 「2024香港資訊及通訊科技獎︰學生創新獎 (The Hong Kong ICT Awards 2024 : Student Innovation Award)」的籌辦機構，以推動學界創科發展，現誠邀  貴校推動學生積極報名參加，讓他們得以發揮創意，將運算思維配合資訊及通訊科技（ICT）方面的知識，提出有助社會發展的方案。 </p>
-                <p>「學生創新獎」將分為初賽、入圍評審及決賽評審三個階段。整個評審將於七月中旬至八月下旬進行。除初賽外，其餘評審階段將以實體形式進行，屆時所有入圍的參賽隊伍將有機會於專業評審團面前一展創作成果！</p>
+              <p>
+                香港教育城獲香港政府資訊科技總監辦公室 (OGCIO) 正式委任為 「2024香港資訊及通訊科技獎︰學生創新獎 (The
+                Hong Kong ICT Awards 2024 : Student Innovation
+                Award)」的籌辦機構，以推動學界創科發展，現誠邀  貴校推動學生積極報名參加，讓他們得以發揮創意，將運算思維配合資訊及通訊科技（ICT）方面的知識，提出有助社會發展的方案。 
+              </p>
+              <p>
+                「學生創新獎」將分為初賽、入圍評審及決賽評審三個階段。整個評審將於七月中旬至八月下旬進行。除初賽外，其餘評審階段將以實體形式進行，屆時所有入圍的參賽隊伍將有機會於專業評審團面前一展創作成果！
+              </p>
             </div>
             <div class="detail-data-list">
-                <h3>比賽題目</h3>
-                <ul>
-                    <li>提升學習成效 Enhancing Learning</li>
-                    <li>促進身心健康 Promoting Wellness </li>
-                    <li>培養國家情懷 Cultivating Nationalism </li>
-                    <li>提升資訊素養 Enhancing Information Literacy </li>
-                    <li>改善社會問題 Solving Social Issues</li>
-                </ul>
+              <h3>比賽題目</h3>
+              <ul>
+                <li>提升學習成效 Enhancing Learning</li>
+                <li>促進身心健康 Promoting Wellness</li>
+                <li>培養國家情懷 Cultivating Nationalism</li>
+                <li>提升資訊素養 Enhancing Information Literacy</li>
+                <li>改善社會問題 Solving Social Issues</li>
+              </ul>
             </div>
             <div class="detail-data-content detail-data-list">
-                <h3>參賽組別 </h3>
-                    <p>小學組、初中組、高中組及大專及高等教育組*  *包括文憑、高級文憑、副學士及學士全日制課程的學生</p>
-                    <p>教城將於本月開辦三場網上工作坊，分別是比賽簡介會及兩場主題培訓工作坊，向有興趣報名的參加者及學校師生講解今屆比賽詳情。教城亦將邀請專業人士及以往於香港資訊及通訊科技獎的得獎者擔任分享嘉賓，讓參加者進一步認識比賽主題及了解獲獎心得，協助他們為參賽作充分準備。</p>
-               
+              <h3>參賽組別 </h3>
+              <p>
+                小學組、初中組、高中組及大專及高等教育組*
+                *包括文憑、高級文憑、副學士及學士全日制課程的學生
+              </p>
+              <p>
+                教城將於本月開辦三場網上工作坊，分別是比賽簡介會及兩場主題培訓工作坊，向有興趣報名的參加者及學校師生講解今屆比賽詳情。教城亦將邀請專業人士及以往於香港資訊及通訊科技獎的得獎者擔任分享嘉賓，讓參加者進一步認識比賽主題及了解獲獎心得，協助他們為參賽作充分準備。
+              </p>
             </div>
+          </div>
         </div>
-    </div>
-    </div>
-   </section>
-  <footer class="mb-0">
-    <div class="container">
+      </div>
+    </section>
+    <footer class="mb-0">
+      <div class="container">
         <div class="footer-data">
-            <h3 class="copy-right">版權所有© 2024 香港教育城有限公司</h3>
-            <ul class="footer-right">
-                <li>私隱政策聲明</li>
-                <li>版權及知識產權政策</li>
-                <li>免責聲明</li>
-                <li>促進種族平等政策</li>
-            </ul>
+          <h3 class="copy-right">版權所有© 2024 香港教育城有限公司</h3>
+          <ul class="footer-right">
+            <li>私隱政策聲明</li>
+            <li>版權及知識產權政策</li>
+            <li>免責聲明</li>
+            <li>促進種族平等政策</li>
+          </ul>
         </div>
+      </div>
+    </footer>
 
-    </div>
-</footer>
-
-<script src="assets/js/jquery-3.7.1.min.js"></script>
-<script src="assets/js/bootstrap.bundle.min.js"></script>
-</body>
+    <script src="assets/js/jquery-3.7.1.min.js"></script>
+    <script src="assets/js/bootstrap.bundle.min.js"></script>
+  </body>
 </html>
