--- a/event_registration.html
+++ b/event_registration.html
@@ -151,9 +151,9 @@
                           <div class="que-gray-flex"><h3>活動日期</h3><h4>2024/05/09</h4></div>
                           <div class="que-gray-flex"><h3>地點</h3><h4>沙田沙角邨香港教育城</h4></div>
                           <div class="que-gray-flex"><h3>費用</h3><h4>免費</h4></div>
-                          <div class="que-gray-flex d-none d-sm-block"><h3>活動詳情</h3><h4><button class="register-btn pink-btn">活動詳情</button></h4></div>                    
-                          <div class="que-gray-flex d-none d-sm-block"><h3>活動詳情</h3><h4><button  class="register-btn red-btn">活動詳情</button></h4></div>  
-                          <div class="que-gray-flex d-sm-none"><h4 class="w-100 d-flex justify-content-center gap-4"><button  class="register-btn red-btn">活動詳情</button> <button class="register-btn pink-btn">活動詳情</button></h4></div>     
+                          <div class="que-gray-flex d-none d-sm-block"><h3>活動詳情</h3><a href="registration_recorde_QR.html" class="btn register-btn pink-btn">活動詳情</a></div>                    
+                          <div class="que-gray-flex d-none d-sm-block"><h3>活動詳情</h3><a href="#" class="btn register-btn red-btn">活動詳情</a></div> 
+                          <div class="que-gray-flex d-sm-none"><div class="w-100 d-flex justify-content-center gap-4"><a href="registration_recorde_QR.html" class="register-btn pink-btn btn">活動詳情</a><a href="#" class="register-btn red-btn btn">活動詳情</a></div></div>       
                         </div>
                         <div class="que-tr que-light">
                           <div class="que-gray-flex"><h3>登記日期</h3><h4>2024/03/12</h4></div>
@@ -161,9 +161,9 @@
                           <div class="que-gray-flex"><h3>活動日期</h3><h4>2024/06/28</h4></div>
                           <div class="que-gray-flex"><h3>地點</h3><h4>網上研討會</h4></div>
                           <div class="que-gray-flex"><h3>費用</h3><h4>免費</h4></div>
-                          <div class="que-gray-flex d-none d-sm-block"><h3>活動詳情</h3><h4><button class="register-btn pink-btn">活動詳情</button></h4></div>                    
-                          <div class="que-gray-flex d-none d-sm-block"><h3>活動詳情</h3><h4><button  class="register-btn red-btn">活動詳情</button></h4></div>  
-                          <div class="que-gray-flex d-sm-none"><h4 class="w-100 d-flex justify-content-center gap-4"><button  class="register-btn red-btn">活動詳情</button> <button class="register-btn pink-btn">活動詳情</button></h4></div>        
+                          <div class="que-gray-flex d-none d-sm-block"><h3>活動詳情</h3><a href="registration_recorde_online.html" class="btn register-btn pink-btn">活動詳情</a></div>                    
+                          <div class="que-gray-flex d-none d-sm-block"><h3>活動詳情</h3><a href="#" class="btn register-btn red-btn">活動詳情</a></div> 
+                          <div class="que-gray-flex d-sm-none"><div class="w-100 d-flex justify-content-center gap-4"><a href="registration_recorde_online.html" class="register-btn pink-btn btn">活動詳情</a><a href="#" class="register-btn red-btn btn">活動詳情</a></div></div>       
                         </div>
                         <div class="que-tr que-gray">
                           <div class="que-gray-flex"><h3>登記日期</h3><h4>2024/02/08</h4></div>
@@ -171,9 +171,9 @@
                           <div class="que-gray-flex"><h3>活動日期</h3><h4>2024/10/09</h4></div>
                           <div class="que-gray-flex"><h3>地點</h3><h4>網上研討會</h4></div>
                           <div class="que-gray-flex"><h3>費用</h3><h4>$100.00</h4></div>
-                          <div class="que-gray-flex d-none d-sm-block"><h3>活動詳情</h3><h4><button class="register-btn pink-btn">活動詳情</button></h4></div>                    
-                          <div class="que-gray-flex d-none d-sm-block"><h3>活動詳情</h3><h4><button  class="register-btn red-btn">活動詳情</button></h4></div>  
-                          <div class="que-gray-flex d-sm-none"><h4 class="w-100 d-flex justify-content-center gap-4"><button  class="register-btn red-btn">活動詳情</button> <button class="register-btn pink-btn">活動詳情</button></h4></div>          
+                          <div class="que-gray-flex d-none d-sm-block"><h3>活動詳情</h3><a href="#" class="btn register-btn pink-btn">活動詳情</a></div>                    
+                          <div class="que-gray-flex d-none d-sm-block"><h3>活動詳情</h3><a href="#" class="btn register-btn red-btn">活動詳情</a></div> 
+                          <div class="que-gray-flex d-sm-none"><div class="w-100 d-flex justify-content-center gap-4"><a href="#" class="register-btn pink-btn btn">活動詳情</a><a href="#" class="register-btn red-btn btn">活動詳情</a></div></div>       
                         </div>
                         <div class="que-tr que-light">
                           <div class="que-gray-flex"><h3>登記日期</h3><h4>2024/01/28</h4></div>
@@ -181,9 +181,9 @@
                           <div class="que-gray-flex"><h3>活動日期</h3><h4>2024/10/09</h4></div>
                           <div class="que-gray-flex"><h3>地點</h3><h4>網上研討會</h4></div>
                           <div class="que-gray-flex"><h3>費用</h3><h4>$100.00</h4></div>
-                          <div class="que-gray-flex d-none d-sm-block"><h3>活動詳情</h3><h4><button class="register-btn pink-btn">活動詳情</button></h4></div>                    
-                          <div class="que-gray-flex d-none d-sm-block"><h3>活動詳情</h3><h4><button  class="register-btn red-btn">活動詳情</button></h4></div>  
-                          <div class="que-gray-flex d-sm-none"><h4 class="w-100 d-flex justify-content-center gap-4"><button  class="register-btn red-btn">活動詳情</button> <button class="register-btn pink-btn">活動詳情</button></h4></div>           
+                          <div class="que-gray-flex d-none d-sm-block"><h3>活動詳情</h3><a href="#" class="btn register-btn pink-btn">活動詳情</a></div>                    
+                          <div class="que-gray-flex d-none d-sm-block"><h3>活動詳情</h3><a href="#" class="btn register-btn red-btn">活動詳情</a></div> 
+                          <div class="que-gray-flex d-sm-none"><div class="w-100 d-flex justify-content-center gap-4"><a href="#" class="register-btn pink-btn btn">活動詳情</a><a href="#" class="register-btn red-btn btn">活動詳情</a></div></div>         
                         </div>
                         <div class="que-tr que-gray">
                           <div class="que-gray-flex"><h3>登記日期</h3><h4>2024/01/28</h4></div>
@@ -191,9 +191,9 @@
                           <div class="que-gray-flex"><h3>活動日期</h3><h4>2024/07/12</h4></div>
                           <div class="que-gray-flex"><h3>地點</h3><h4>消費者委員會</h4></div>
                           <div class="que-gray-flex"><h3>費用</h3><h4>免費</h4></div>
-                          <div class="que-gray-flex d-none d-sm-block"><h3>活動詳情</h3><h4><button class="register-btn pink-btn">活動詳情</button></h4></div>                    
-                          <div class="que-gray-flex d-none d-sm-block"><h3>活動詳情</h3><h4><button  class="register-btn red-btn">活動詳情</button></h4></div>  
-                          <div class="que-gray-flex d-sm-none"><h4 class="w-100 d-flex justify-content-center gap-4"><button  class="register-btn red-btn">活動詳情</button> <button class="register-btn pink-btn">活動詳情</button></h4></div>         
+                          <div class="que-gray-flex d-none d-sm-block"><h3>活動詳情</h3><a href="#" class="btn register-btn pink-btn">活動詳情</a></div>                    
+                          <div class="que-gray-flex d-none d-sm-block"><h3>活動詳情</h3><a href="#" class="btn register-btn red-btn">活動詳情</a></div> 
+                          <div class="que-gray-flex d-sm-none"><div class="w-100 d-flex justify-content-center gap-4"><a href="#" class="register-btn pink-btn btn">活動詳情</a><a href="#" class="register-btn red-btn btn">活動詳情</a></div></div>       
                         </div>
                         <div class="que-tr que-light">
                           <div class="que-gray-flex"><h3>登記日期</h3><h4>2024/02/08</h4></div>
@@ -201,9 +201,9 @@
                           <div class="que-gray-flex"><h3>活動日期</h3><h4>2024/10/09</h4></div>
                           <div class="que-gray-flex"><h3>地點</h3><h4>網上研討會</h4></div>
                           <div class="que-gray-flex"><h3>費用</h3><h4>$100.00</h4></div>
-                          <div class="que-gray-flex d-none d-sm-block"><h3>活動詳情</h3><h4><button class="register-btn pink-btn">活動詳情</button></h4></div>                    
-                          <div class="que-gray-flex d-none d-sm-block"><h3>活動詳情</h3><h4><button  class="register-btn red-btn">活動詳情</button></h4></div>  
-                          <div class="que-gray-flex d-sm-none"><h4 class="w-100 d-flex justify-content-center gap-4"><button  class="register-btn red-btn">活動詳情</button> <button class="register-btn pink-btn">活動詳情</button></h4></div>          
+                          <div class="que-gray-flex d-none d-sm-block"><h3>活動詳情</h3><a href="#" class="btn register-btn pink-btn">活動詳情</a></div>                    
+                          <div class="que-gray-flex d-none d-sm-block"><h3>活動詳情</h3><a href="#" class="btn register-btn red-btn">活動詳情</a></div> 
+                          <div class="que-gray-flex d-sm-none"><div class="w-100 d-flex justify-content-center gap-4"><a href="#" class="register-btn pink-btn btn">活動詳情</a><a href="#" class="register-btn red-btn btn">活動詳情</a></div></div>       
                         </div>
                         <div class="que-tr que-gray">
                           <div class="que-gray-flex"><h3>登記日期</h3><h4>2024/01/28</h4></div>
@@ -211,9 +211,9 @@
                           <div class="que-gray-flex"><h3>活動日期</h3><h4>2024/07/12</h4></div>
                           <div class="que-gray-flex"><h3>地點</h3><h4>消費者委員會</h4></div>
                           <div class="que-gray-flex"><h3>費用</h3><h4>免費</h4></div>
-                          <div class="que-gray-flex d-none d-sm-block"><h3>活動詳情</h3><h4><button class="register-btn pink-btn">活動詳情</button></h4></div>                    
-                          <div class="que-gray-flex d-none d-sm-block"><h3>活動詳情</h3><h4><button  class="register-btn red-btn">活動詳情</button></h4></div>  
-                          <div class="que-gray-flex d-sm-none"><h4 class="w-100 d-flex justify-content-center gap-4"><button  class="register-btn red-btn">活動詳情</button> <button class="register-btn pink-btn">活動詳情</button></h4></div>          
+                          <div class="que-gray-flex d-none d-sm-block"><h3>活動詳情</h3><a href="#" class="btn register-btn pink-btn">活動詳情</a></div>                    
+                          <div class="que-gray-flex d-none d-sm-block"><h3>活動詳情</h3><a href="#" class="btn register-btn red-btn">活動詳情</a></div> 
+                          <div class="que-gray-flex d-sm-none"><div class="w-100 d-flex justify-content-center gap-4"><a href="#" class="register-btn pink-btn btn">活動詳情</a><a href="#" class="register-btn red-btn btn">活動詳情</a></div></div>         
                         </div>
                       </div>
                     </div>
