--- a/partner.html
+++ b/partner.html
@@ -120,7 +120,7 @@
                 <a href="#" class="btn partner-btn"><img src="assets/images/PlusSquare.png" alt=""> 新增活動 </a>
                 </div>
                 <div class="quontation-table partner-table-head">
-                    <div class="que-head d-none d-sm-flex green-bg ">
+                    <div class="que-head d-none d-md-flex green-bg ">
                       <div><h4></h4></div>
                       <div class="res-view"><h4>活動名稱</h4></div>
                       <div ><h4>活動日期範圍</h4></div>
@@ -137,13 +137,13 @@
                           <div class="que-gray-flex"><h3>活動日期範圍</h3><h4>2022/03/01 00:00 - 2022/03/31 23:59</h4></div>
                           <div class="que-gray-flex small-flex"><h3>狀態</h3><h4>Draft</h4></div>
                           <div class="que-gray-flex med-flex"><h3>最後修改日期</h3><h4>2022/03/28 hke-keny</h4></div>
-                          <div class="d-none d-sm-block que-gray-flex"> 
+                          <div class="d-none d-md-block que-gray-flex"> 
                             <div class="action-td">
                                 <a href="#"><img src="assets/images/edit.png" alt=""></a>
                                 <a href="#"><img src="assets/images/dlt.png" alt=""></a>
                             </div>
                       </div>
-                        <div  class="que-gray-flex d-sm-none action-mobile  justify-content-center">
+                        <div  class="que-gray-flex d-md-none action-mobile  justify-content-center">
                           <div class="action-btn"><a href="#"><img src="assets/images/edit.png" alt=""></a> </div>
                           <div class="action-btn"><a href="#"><img src="assets/images/dlt.png" alt=""></a> </div>
                         </div>
@@ -157,13 +157,13 @@
                           <div class="que-gray-flex"><h3>活動日期範圍</h3><h4>2022/03/01 11:00 -2022/03/31 12:00</h4></div>
                           <div class="que-gray-flex small-flex"><h3>狀態</h3><h4>To Be Published</h4></div>
                           <div class="que-gray-flex med-flex"><h3>最後修改日期</h3><h4>2022/03/28</h4></div>
-                          <div class="d-none d-sm-block que-gray-flex"> 
+                          <div class="d-none d-md-block que-gray-flex"> 
                             <div class="action-td">
                                 <a href="#"><img src="assets/images/edit.png" alt=""></a>
                                 <a href="#"><img src="assets/images/dlt.png" alt=""></a>
                             </div>
                       </div>
-                        <div  class="que-gray-flex d-sm-none action-mobile  justify-content-center">
+                        <div  class="que-gray-flex d-md-none action-mobile  justify-content-center">
                           <div class="action-btn"><a href="#"><img src="assets/images/edit.png" alt=""></a> </div>
                           <div class="action-btn"><a href="#"><img src="assets/images/dlt.png" alt=""></a> </div>
                         </div>
@@ -177,13 +177,13 @@
                           <div class="que-gray-flex"><h3>活動日期範圍</h3><h4>2022/03/01 22:00 -2022/03/31 12:00</h4></div>
                           <div class="que-gray-flex small-flex"><h3>狀態</h3><h4>Published</h4></div>
                           <div class="que-gray-flex med-flex"><h3>最後修改日期</h3><h4>2022/03/31hke-kywong7</h4></div>
-                          <div class="d-none d-sm-block que-gray-flex"> 
+                          <div class="d-none d-md-block que-gray-flex"> 
                             <div class="action-td">
                                 <a href="#"><img src="assets/images/edit.png" alt=""></a>
                                 <a href="#"><img src="assets/images/dlt.png" alt=""></a>
                             </div>
                       </div>
-                        <div  class="que-gray-flex d-sm-none action-mobile  justify-content-center">
+                        <div  class="que-gray-flex d-md-none action-mobile  justify-content-center">
                           <div class="action-btn"><a href="#"><img src="assets/images/edit.png" alt=""></a> </div>
                           <div class="action-btn"><a href="#"><img src="assets/images/dlt.png" alt=""></a> </div>
                         </div>
@@ -197,13 +197,13 @@
                           <div class="que-gray-flex"><h3>活動日期範圍</h3><h4>2022/03/28 00:00 -2022/03/31 23:59</h4></div>
                           <div class="que-gray-flex small-flex"><h3>狀態</h3><h4>Withdraw</h4></div>
                           <div class="que-gray-flex med-flex"><h3>最後修改日期</h3><h4>2022/06/27hke-daeman</h4></div>
-                          <div class="d-none d-sm-block que-gray-flex"> 
+                          <div class="d-none d-md-block que-gray-flex"> 
                             <div class="action-td">
                                 <a href="#"><img src="assets/images/edit.png" alt=""></a>
                                 <a href="#"><img src="assets/images/dlt.png" alt=""></a>
                             </div>
                       </div>
-                        <div  class="que-gray-flex d-sm-none action-mobile  justify-content-center">
+                        <div  class="que-gray-flex d-md-none action-mobile  justify-content-center">
                           <div class="action-btn"><a href="#"><img src="assets/images/edit.png" alt=""></a> </div>
                           <div class="action-btn"><a href="#"><img src="assets/images/dlt.png" alt=""></a> </div>
                         </div>
@@ -217,13 +217,13 @@
                           <div class="que-gray-flex"><h3>活動日期範圍</h3><h4>2022/03/01 00:00 -2022/03/31 23:59</h4></div>
                           <div class="que-gray-flex small-flex"><h3>狀態</h3><h4>Draft</h4></div>
                           <div class="que-gray-flex med-flex"><h3>最後修改日期</h3><h4>2022/03/28hke-keny</h4></div>
-                          <div class="d-none d-sm-block que-gray-flex"> 
+                          <div class="d-none d-md-block que-gray-flex"> 
                             <div class="action-td">
                                 <a href="#"><img src="assets/images/edit.png" alt=""></a>
                                 <a href="#"><img src="assets/images/dlt.png" alt=""></a>
                             </div>
                       </div>
-                        <div  class="que-gray-flex d-sm-none action-mobile  justify-content-center">
+                        <div  class="que-gray-flex d-md-none action-mobile  justify-content-center">
                           <div class="action-btn"><a href="#"><img src="assets/images/edit.png" alt=""></a> </div>
                           <div class="action-btn"><a href="#"><img src="assets/images/dlt.png" alt=""></a> </div>
                         </div>
@@ -237,13 +237,13 @@
                           <div class="que-gray-flex"><h3>活動日期範圍</h3><h4>2022/03/01 11:00 -2022/03/31 12:00</h4></div>
                           <div class="que-gray-flex small-flex"><h3>狀態</h3><h4>To Be Published</h4></div>
                           <div class="que-gray-flex med-flex"><h3>最後修改日期</h3><h4>2022/03/28</h4></div>
-                          <div class="d-none d-sm-block que-gray-flex"> 
+                          <div class="d-none d-md-block que-gray-flex"> 
                             <div class="action-td">
                                 <a href="#"><img src="assets/images/edit.png" alt=""></a>
                                 <a href="#"><img src="assets/images/dlt.png" alt=""></a>
                             </div>
                       </div>
-                        <div  class="que-gray-flex d-sm-none action-mobile  justify-content-center">
+                        <div  class="que-gray-flex d-md-none action-mobile  justify-content-center">
                           <div class="action-btn"><a href="#"><img src="assets/images/edit.png" alt=""></a> </div>
                           <div class="action-btn"><a href="#"><img src="assets/images/dlt.png" alt=""></a> </div>
                         </div>
@@ -257,13 +257,13 @@
                           <div class="que-gray-flex"><h3>活動日期範圍</h3><h4>2022/03/01 22:00 -2022/03/31 12:00</h4></div>
                           <div class="que-gray-flex small-flex"><h3>狀態</h3><h4>Published</h4></div>
                           <div class="que-gray-flex med-flex"><h3>最後修改日期</h3><h4>2022/03/31hke-kywong7</h4></div>
-                          <div class="d-none d-sm-block que-gray-flex"> 
+                          <div class="d-none d-md-block que-gray-flex"> 
                             <div class="action-td">
                             <img src="assets/images/edit.png" alt="">
                             <img src="assets/images/dlt.png" alt="">
                             </div>
                       </div>
-                        <div  class="que-gray-flex d-sm-none action-mobile  justify-content-center">
+                        <div  class="que-gray-flex d-md-none action-mobile  justify-content-center">
                           <div class="action-btn"><img src="assets/images/edit.png" alt=""> </div>
                           <div class="action-btn"><img src="assets/images/dlt.png" alt=""> </div>
                         </div>
@@ -277,13 +277,13 @@
                           <div class="que-gray-flex"><h3>活動日期範圍</h3><h4>2022/03/28 00:00 -2022/03/31 23:59</h4></div>
                           <div class="que-gray-flex small-flex"><h3>狀態</h3><h4>Withdraw</h4></div>
                           <div class="que-gray-flex med-flex"><h3>最後修改日期</h3><h4>2022/06/27hke-daeman</h4></div>
-                          <div class="d-none d-sm-block que-gray-flex"> 
+                          <div class="d-none d-md-block que-gray-flex"> 
                             <div class="action-td">
                             <img src="assets/images/edit.png" alt="">
                             <img src="assets/images/dlt.png" alt="">
                             </div>
                       </div>
-                        <div  class="que-gray-flex d-sm-none action-mobile  justify-content-center">
+                        <div  class="que-gray-flex d-md-none action-mobile  justify-content-center">
                           <div class="action-btn"><img src="assets/images/edit.png" alt=""> </div>
                           <div class="action-btn"><img src="assets/images/dlt.png" alt=""> </div>
                         </div>
